Removed a lot of redndant cast after generisizing, but many remain.